src/objects/Case/fields/Article_Template__c.field-meta.xml
<CustomField>
    <fullName>Article_Template__c</fullName>
    <label>Article Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Article_Templates__gvs</valueSetName>
    </valueSet>
</CustomField>