src/objects/Case/fields/NCP_List_of_Requested_Available_Services__c.field-meta.xml
<CustomField>
    <fullName>NCP_List_of_Requested_Available_Services__c</fullName>
    <label>List of Requested Available Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NCP_Access_Types__gvs</valueSetName>
    </valueSet>
</CustomField>