src/objects/Case/fields/Sales_Roles__c.field-meta.xml
<CustomField>
    <fullName>Sales_Roles__c</fullName>
    <label>Sales Roles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Roles__gvs</valueSetName>
    </valueSet>
</CustomField>